[gd_scene load_steps=5 format=3 uid="uid://dsn7txa8s7k7a"]

[ext_resource type="Script" path="res://scripts/song.gd" id="1_6sr2h"]
[ext_resource type="Texture2D" uid="uid://bs28oppkt5vl0" path="res://sprites/rounded.png" id="2_kwr0x"]
[ext_resource type="Texture2D" uid="uid://bwt0jsvcu0mys" path="res://sprites/RatTrapIcon.png" id="3_m5ev5"]

[sub_resource type="LabelSettings" id="LabelSettings_kqlvo"]
font_color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="Song" type="Button"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -295.0
offset_right = -19.0
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
script = ExtResource("1_6sr2h")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 787.0
offset_bottom = 31.0
text = "SongName"
text_overrun_behavior = 3

[node name="Id" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -31.0
offset_right = 787.0
offset_bottom = -5.0
grow_vertical = 0
text = "999999999999"
label_settings = SubResource("LabelSettings_kqlvo")
text_overrun_behavior = 3

[node name="Roundifier" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(965.5, 34)
scale = Vector2(0.19, 0.193333)
texture = ExtResource("2_kwr0x")

[node name="Icon" type="TextureRect" parent="Roundifier"]
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("3_m5ev5")
expand_mode = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
